--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -55,7 +55,7 @@ assignees: # Users to assign downtime issues (optional)
   - Suput
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
-  cname: status.rtuitlab.dev
+  cname: status.rtuitlab.ru
   # Uncomment the following line if you don't have a custom domain and add your repo name
 #   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
