--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -42,7 +42,7 @@ sites:
     assignees:
       - Suput
   
-  - name: StuDo
+  - name: Hahaton
     url: https://hahaton-mirea.ru
     icon: https://hahaton-mirea.ru/b27992b22804ff76b94a.svg
     assignees:
