--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -56,6 +56,10 @@ sites:
     url: https://schedule-rtu.rtuitlab.ru/api/schedule/get_groups
     assignees:
       - Nekolya
+  - name: Cloud
+    url: https://cloud.domik.team/status.php
+    assignees:
+      - CAPCHIK
 assignees: # Users to assign downtime issues (optional)
   - CAPCHIK
   - Suput
