--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -57,7 +57,7 @@ sites:
     assignees:
       - Nekolya
   - name: Cloud
-    url: https://cloud.domik.team/status.php
+    url: https://cloud.rtuitlab.dev/status.php
     assignees:
       - CAPCHIK
 assignees: # Users to assign downtime issues (optional)
