--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,10 +4,8 @@ repo: upptime # Your GitHub repository name
 
 # Add your sites here
 sites:
-  - name: VIKA (.dev)
-    url: https://vika.rtuitlab.dev/api/about/vkgroupid
-  - name: VIKA (.ru)
-    url: https://vika.rtuitlab.ru/api/about/vkgroupid
+  - name: VIKA
+    url: https://vika.mirea.ru/api/about/vkgroupid
 
   - name: Landing (.dev)
     url: https://rtuitlab.dev
