--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ repo: upptime # Your GitHub repository name
 # Add your sites here
 sites:
   - name: VIKA
-    url: https://vika.mirea.ru/api/about/vkgroupid
+    url: https://d5ddvcmphf4rj5mi4vvv.apigw.yandexcloud.net/upptime/vika
     __dangerous__insecure: true
 
   - name: Landing (.dev)
@@ -38,11 +38,11 @@ sites:
   - name: Schedule (.dev)
     url: https://schedule-rtu.rtuitlab.dev/api/schedule/get_groups
     assignees:
-      - Nekolya
+      - IvLaptev
   - name: Schedule (.ru)
     url: https://schedule-rtu.rtuitlab.ru/api/schedule/get_groups
     assignees:
-      - Nekolya
+      - IvLaptev
  
   - name: Cloud
     url: https://cloud.rtuitlab.dev/status.php
